# app-test-deployment

./: .gitignore  docker-compose.yaml  dockerfile.app  dockerfile.server  dv.app.env  dv.server.env
afronectar/: manage.py  pyproject.toml  requirements.txt
afronectar/afronectar/: asgi.py  settings.py  urls.py  wsgi.py
afronectar/app/: models.py  urls.py  views.py
afronectar/templates/: index.html
nginx/templates/: default.conf.template
